# influxdb_windows_collector

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: app.py  config.ini  config.py
src/libs/: ClientIntervalApp.py  InfluxdbConnect.py  SystemCollector.py
src/utils/: logger.py
