[project]
name = "influxdb-windows-collector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "clr-loader==0.2.7.post0",
    "influxdb-client==1.49.0",
    "pycparser==2.22",
    "python-dateutil==2.9.0.post0",
    "pythonnet==3.0.5",
    "reactivex==4.0.4",
    "setuptools==80.8.0",
    "six==1.17.0",
    "typing-extensions==4.13.2",
    "urllib3==2.4.0",
]
